druid-derive/tests/ui/with-union.stderr
error: Lens implementations cannot be derived from unions
 --> $DIR/with-union.rs:4:1
  |
4 | union Foobar {
  | ^^^^^
