druid-derive/tests/ui/with-union.rs
use druid::*;

#[derive(Lens)]
union Foobar {
    foo: i32,
    bar: f64,
}

fn main() {}
